# Futura

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Futura.slnx  GenerateProjects.bat  README.md  premake5.lua
Futura/assets/models/: RubixCube.mtl
Futura/assets/scenes/: city_preview.scene
Futura/assets/shaders/: DebugLine.glsl  RendererTest.glsl
Futura/src/: Futura.cpp  GameLayer.cpp  GameLayer.h  SceneWorld.cpp  SceneWorld.h
FuturaLibrary/src/: FuturaLibrary.h  pch.h
FuturaLibrary/src/FuturaLibrary/core/: c_FPSCameraController.cpp  c_FPSCameraController.h  c_Layer.cpp  c_Layer.h  c_LayerStack.h  c_PerspectiveCamera.cpp  c_camera.h  (+11 more)
assets/models/: Container.cpp  Container.h  Plane.h
futura-docs/: mkdocs.yml
futura-docs/docs/: architecture.md  current-progress.md  development-conventions.md  event-journal.md  getting-started.md  index.md  opengl-refresher.md  purpose.md
src/: main.cpp
src/core/: c_camera.cpp  c_camera.h  c_input.cpp  c_input.h  c_window.cpp  c_window.h  camera.cpp  camera.h  input.cpp  input.h  window.cpp  window.h  window_context.h
src/graphics/: c_model_manager.cpp  c_model_manager.h  g_mesh.cpp  g_mesh.h  g_model.cpp  g_model.h  g_model_manager.cpp  g_model_manager.h  g_renderer.cpp  g_renderer.h  g_shader.cpp  g_shader.h  g_texture.cpp  g_texture.h  g_transform.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
src/graphics/models/: Container.cpp  Container.h  Triangle.cpp  Triangle.h
src/graphics/shaders/: Container.fs  Container.vs
src/utils/: log.cpp  log.h  u_log.cpp  u_log.h
(+56 files in other folders)
